# vcmi

./: CCallback.cpp  CCallback.h  CMakeLists.txt
AI/BattleAI/: BattleAI.cpp  StackWithBonuses.cpp  StackWithBonuses.h
AI/VCAI/: AIUtility.cpp  VCAI.cpp  VCAI.h
CI/mac/: before_install.sh
client/: CMT.cpp  CPlayerInterface.cpp  CPlayerInterface.h  CServerHandler.cpp  Client.cpp  Client.h  NetPacksClient.cpp
client/battle/: CBattleInterface.cpp  CBattleInterface.h
client/widgets/: CComponent.cpp
lib/: CArtHandler.cpp  CArtHandler.h  CCreatureHandler.h  CGameInfoCallback.cpp  CGameInfoCallback.h  CGameInterface.cpp  CGameInterface.h  CGameState.cpp  CMakeLists.txt  CModHandler.cpp  CPathfinder.cpp  CPathfinder.h  CScriptingModule.h  CThreadHelper.h  GameConstants.h  HeroBonus.cpp  HeroBonus.h  IGameCallback.cpp  IGameCallback.h  IGameEventsReceiver.h  NetPacks.h  NetPacksLib.cpp  ScriptHandler.cpp  ScriptHandler.h  ScriptingService.h  Services.h  VCMI_Lib.cpp  VCMI_Lib.h  VCMI_lib.cbp
scripting/lua/: CMakeLists.txt  Lua.cbp  LuaCallWrapper.h  LuaScriptModule.cpp  LuaScriptModule.h  LuaScriptingContext.cpp  LuaScriptingContext.h  LuaSpellEffect.cpp  LuaSpellEffect.h  LuaStack.cpp  LuaStack.h  LuaWrapper.h
scripting/lua/api/: BattleCb.cpp  BattleCb.h  BattleServerCb.cpp  BattleServerCb.h  GameCb.cpp  Registry.cpp  Registry.h  ServerCb.cpp  ServerCb.h
scripting/lua/api/battle/: UnitProxy.cpp  UnitProxy.h
scripting/lua/api/netpacks/: InfoWindow.cpp  InfoWindow.h  PackForClient.h
server/: CGameHandler.cpp  CGameHandler.h
test/: CMakeLists.txt  Test.cbp
(+107 files in other folders)
